# Vidi1.5-9B-mlx-8bit

./: .gitattributes  .gitignore  .gitignore.bak  LICENSE  NOTICE  README.md  config.json  model.safetensors.index.json  pyproject.toml  tokenizer_config.json  web_app.py
mlx_vidi/: __init__.py  __main__.py  audio_encoder.py  config.py  convert_weights.py  generate.py  model.py  preprocessing.py  projectors.py  quantize.py  run.py  vision_encoder.py
templates/: index.html
